# National-Soil-Information-and-Land-Suitability-Evaluation-System-in-Cambodia

./: Cambodia_Agricultural_Zones_Analysis.csv  Cambodia_Agricultural_Zones_Results.geojson  pyproject.toml
dataset/: Agricultural Census.csv  crop_prod.csv
soil-type/: ST.dbf  ST.dbf~  ST.sbn  ST.sbx  ST.shp  ST.shp.xml  ST.shx
src/: ANALYSIS_REPORT.txt  Cambodia_Agricultural_Zones_Analysis.csv  Cambodia_Agricultural_Zones_Results.geojson
