[project]
name = "national-soil-information-and-land-suitability-evaluation-system-in-cambodia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.17",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "psutil>=7.1.3",
    "pyogrio>=0.11.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
